# glitchy-engine-beef

./: .gitignore  .gitmodules  BeefSpace.toml  Defines.txt  README.md
Doc/DesignCodeExamples/: readme.md
GlitchLog/: BeefProj.toml
GlitchLog/src/: DebugLogger.bf  FileLogger.bf  GlitchLog.bf  ILogger.bf  LogLevel.bf  Logger.bf
GlitchyEditor/: BeefProj.toml
GlitchyEditor/EditorUI/: BeefProj.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.debug.ts  vite.config.ts
GlitchyEditor/SandboxProject/: .gitignore  project.gep  project_user.bon
GlitchyEditor/assets/: app.html  test_entity_hierarchy.html
GlitchyEditor/src/: AssetFile.bf  Editor.bf  EditorApp.bf  EditorCameraController.bf  EditorContentManager.bf  EditorIcons.bf  EditorLayer.bf  EditorLogger.bf  EditorSettings.bf  Handles.bf  ImGuiExtension.bf  Project.bf  ProjectUserSettings.bf  SettingsWindow.bf  TextureViewer.bf  UltralightLayer.bf  VisualStudioUtility.bf
GlitchyEngine/: BeefProj.toml
GlitchyEngine.Test/: BeefProj.toml  BeefSpace.toml
GlitchyEngine.Test/src/: TestApp.bf
GlitchyEngine/src/: Application.bf  GameTime.bf  Helper.bf  Input.bf  Key.bf  KeyCodes.bf  Layer.bf  LayerStack.bf  Log.bf  OrthographicCameraController.bf  PerspectiveCameraController.bf  Program.bf  Settings.bf  Test.bf  Window.bf  WindowRectangle.bf
GlitchyEngineHelper/: .gitignore  BeefProj.toml  Build_Mono.ps1  CMakeLists.txt  CMakePresets.json  DotNetRuntime.cpp  DotNetRuntime.h  GlitchyEngineHelper.cpp  GlitchyEngineHelper.h
GlitchyEngineHelper/DotNetScriptingHelper/: DotNetScriptingHelper.csproj  DotNetScriptingHelper.sln  EcsEntity.cs  Entity.cs  GameTime.cs  IGameComponent.cs  InteropHelper.cs  QuaternionExtensions.cs  ScriptableEntity.cs  TestEntityScript.cs
GlitchyEngineHelper/DotNetScriptingHelper/Components/: TransformComponent.cs
GlitchyEngineHelper/src/: DotNet.bf  DotNetRuntime.bf  xxHash.bf
GlitchyEngineHelper/src/DirectXTK/: DDSTextureLoader.bf
GlitchyEngineHelper/src/DotNet/: CoreClr.bf  DotNetContext.bf  HostFxr.bf  NetHost.bf
GlitchyEngineHelper/src/LZ4/: LZ4Frame.bf
GlitchyEngineHelper/src/Mono/: Mono.bf
GlitchyEngineHelper/src/Mono/Jit/: Jit.bf
GlitchyEngineHelper/src/Mono/Metadata/: Assembly.bf
Imgui/: BeefProj.toml
Sandbox/: BeefProj.toml  change_direction_test.txt  test.txt
Sandbox/content/: basicShader.hlsl  textureShader.hlsl
Sandbox/src/: ColorHSV.bf  ExampleLayer.bf  ExampleLayer2D.bf  GameLayer.bf  GammaTestLayer.bf  Line2D.bf  Obstacle.bf  ParticleSystem.bf  Program.bf  Rocket.bf  SandboxApp.bf  SandboxApp2D.bf  TextureViewer.bf
ScriptCore/: BeefProj.toml  CSharpTesting.cs  Entity.cs  Input.cs  Key.cs  Log.cs  MouseButton.cs  MyTestEntity.cs  Physics2D.cs  ScriptCore.csproj  ScriptCore.sln  ScriptGlue.cs  ScriptGlue.json  postbuild.ps1
ScriptCore/Components/: Component.cs  RigidBody2D.cs  Transform.cs
ScriptCore/Core/: Application.cs  Camera.cs  Component.cs  EngineClassAttribute.cs  EngineObject.cs  EngineResult.cs  Transform.cs  UUID.cs
ScriptCore/Editor/: CustomEditorAttribute.cs  DictionaryEditor.cs  EditorFlags.cs  EntityEditor.cs  HideInEditorAttribute.cs  LabelAttribute.cs  NumberFormatAttribute.cs  RangeAttribute.cs  ReadonlyAttribute.cs  RunInEditModeAttribute.cs  ShowButtonAttribute.cs  ShowInEditorAttribute.cs  TextFieldAttribute.cs  TooltipAttribute.cs
ScriptCore/Extensions/: ActivatorExtension.cs  EnumExtension.cs  FieldInfoExtension.cs  ImGuiExtension.cs  KeyValuePairExtension.cs  MemberInfoExtension.cs  MethodInfoExtension.cs  StringExtension.cs  TypeExtension.cs
ScriptCore/Graphics/: Asset.cs  CircleRenderer.cs  Material.cs  Mesh.cs  MeshRenderer.cs  SpriteRenderer.cs  TextRenderer.cs  Texture.cs  UVTransform.cs
ScriptCore/Math/: BoolVectors.cs  Color.cs  ColorHSV.cs  (+16 more)
ScriptCoreGenerator/: FunctionGenerator.cs  MakeConstCodeFixProvider.cs  MatrixGenerator.cs  ScriptCoreGenerator.csproj  ScriptGlueGenerator.cs  Strings.Designer.cs  Strings.resx  StyleChecker.cs  SyntaxNodeExtensions.cs  VectorGenerator.cs
ScriptCoreGenerator.Test/: MakeConstUnitTests.cs  ScriptCoreGenerator.Test.csproj
(+510 files in other folders)
